[main-private] minor improvements